--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -10,7 +10,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: "/10 * * * *"
+    - cron: "1/10 * * * *"
   watch:
     types: [started]
    
